makefile builds both

--- a/MachineLearning/CMakeLists.txt
+++ b/MachineLearning/CMakeLists.txt
@@ -3,5 +3,8 @@ project( GenData CXX)
 find_package( OpenCV )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( GenData GenData.cpp )
+add_executable( TrainAndTest TrainAndTest.cpp )
 target_link_libraries( GenData ${OpenCV_LIBS} )
+target_link_libraries( TrainAndTest ${OpenCV_LIBS} )
 target_compile_features( GenData PRIVATE cxx_range_for)
+target_compile_features( TrainAndTest PRIVATE cxx_range_for)
