--- a/MachineLearning/CMakeLists.txt
+++ b/MachineLearning/CMakeLists.txt
@@ -5,9 +5,12 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( GenData GenData.cpp )
 add_executable( TrainAndTest TrainAndTest.cpp )
 add_executable( DetectLines DetectLines.cpp )
+add_executable( TrainAndTest_RForest TrainAndTest_RForest.cpp )
 target_link_libraries( GenData ${OpenCV_LIBS} )
 target_link_libraries( TrainAndTest ${OpenCV_LIBS} )
 target_link_libraries( DetectLines ${OpenCV_LIBS} )
+target_link_libraries( TrainAndTest_RForest ${OpenCV_LIBS} )
 target_compile_features( GenData PRIVATE cxx_range_for)
 target_compile_features( TrainAndTest PRIVATE cxx_range_for)
 target_compile_features( DetectLines PRIVATE cxx_range_for)
+target_compile_features( TrainAndTest_RForest PRIVATE cxx_range_for)
