clean up old files

--- a/MachineLearning/CMakeLists.txt
+++ b/MachineLearning/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable( TrainAndTest TrainAndTest.cpp )
 add_executable( DetectLines DetectLines.cpp )
 target_link_libraries( GenData ${OpenCV_LIBS} )
 target_link_libraries( TrainAndTest ${OpenCV_LIBS} )
+target_link_libraries( TrainAndTest_RForest ${OpenCV_LIBS} )
+target_link_libraries( TrainAndTest_nbayes ${OpenCV_LIBS} )
 target_link_libraries( DetectLines ${OpenCV_LIBS} )
 target_compile_features( GenData PRIVATE cxx_range_for)
 target_compile_features( TrainAndTest PRIVATE cxx_range_for)
